--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.6"
   },
